# postgres-fdw

./: Cargo.toml  Makefile
db721_fdw/: Cargo.toml  README.md  db721_fdw.control
db721_fdw/data/: db721_fdw--0.0.1.sql  db721_fdw.control
db721_fdw/src/: db721_fdw.rs  lib.rs  parser.rs
supabase-wrappers/: Cargo.toml
supabase-wrappers/src/: interface.rs
wrappers/: Cargo.toml
wrappers/src/fdw/: mod.rs
wrappers/src/fdw/db721_fdw/: README.md  db721_fdw.rs  metadata.rs  mod.rs  parser.rs
