[package]
name = "db721_fdw"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg_test = []

[dependencies]
pgx = "=0.6.1"
supabase-wrappers = { path = "../supabase-wrappers" }

serde = { version = "1", features = ["derive"] }
serde_json = "*"
env_logger = "*"
log = { version = "*", features = ["release_max_level_info"] }
memmap2 = "0.5"

[dev-dependencies]
pgx-tests = "=0.6.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
debug = true
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
